init sketcher & homepage

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="/img/nikkiExcited.png" type="image/png">
+    <link rel="icon" href="/asset/nikkiExcited.png" type="image/png">
     <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="/style/Home/main.css">
     <link rel="stylesheet" href="/style/NikkiKiwi/main.css">
     <link rel="stylesheet" href="/style/NikkiKiwi/filter.css">
     <link rel="stylesheet" href="/style/NikkiKiwi/data.css">
+    <link rel="stylesheet" href="/style/Sketcher/main.css">
+    <link rel="stylesheet" href="/style/Sketcher/pathManager.css">
+    <link rel="stylesheet" href="/style/Sketcher/tools.css">
   </head>
   <body>
     <div id="root">
