--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/style/Sketcher/main.css">
     <link rel="stylesheet" href="/style/Sketcher/pathManager.css">
     <link rel="stylesheet" href="/style/Sketcher/tools.css">
+    <link rel="stylesheet" href="/style/Steamster/main.css">
   </head>
   <body>
     <div id="root">
