--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/asset/nikkiExcited.png" type="image/png">
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/Home/main.css">
+    <link rel="stylesheet" href="/style/Home/notFound.css">
     <link rel="stylesheet" href="/style/NikkiKiwi/main.css">
     <link rel="stylesheet" href="/style/NikkiKiwi/filter.css">
     <link rel="stylesheet" href="/style/NikkiKiwi/data.css">
