chat & gossip implemented

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="/asset/nikkiExcited.png" type="image/png">
+    <link rel="icon" href="" type="image/png">
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/Home/main.css">
     <link rel="stylesheet" href="/style/Home/notFound.css">
