--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/style/Sketcher/pathManager.css">
     <link rel="stylesheet" href="/style/Sketcher/tools.css">
     <link rel="stylesheet" href="/style/Steamster/main.css">
+    <link rel="stylesheet" href="/style/GrainBrain/main.css">
   </head>
   <body>
     <div id="root">
