--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <link rel="icon" href="" type="image/png">
-    <link rel="stylesheet" href="/style/main.css">
-    <link rel="stylesheet" href="/style/Home/main.css">
-    <link rel="stylesheet" href="/style/Home/notFound.css">
-    <link rel="stylesheet" href="/style/NikkiKiwi/main.css">
-    <link rel="stylesheet" href="/style/NikkiKiwi/filter.css">
-    <link rel="stylesheet" href="/style/NikkiKiwi/data.css">
-    <link rel="stylesheet" href="/style/Sketcher/main.css">
-    <link rel="stylesheet" href="/style/Sketcher/pathManager.css">
-    <link rel="stylesheet" href="/style/Sketcher/tools.css">
-    <link rel="stylesheet" href="/style/Steamster/main.css">
-    <link rel="stylesheet" href="/style/GrainBrain/main.css">
+    <title>Nexus</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="Forest's toy and toolbox" />
+    <meta name="keywords" content="Lateinautumn,Forest,portfolio" />
+    <link rel="icon" href="" type="image/png" />
+    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/Home/main.css" />
+    <link rel="stylesheet" href="/style/Home/notFound.css" />
+    <link rel="stylesheet" href="/style/NikkiKiwi/main.css" />
+    <link rel="stylesheet" href="/style/NikkiKiwi/filter.css" />
+    <link rel="stylesheet" href="/style/NikkiKiwi/data.css" />
+    <link rel="stylesheet" href="/style/Sketcher/main.css" />
+    <link rel="stylesheet" href="/style/Sketcher/pathManager.css" />
+    <link rel="stylesheet" href="/style/Sketcher/tools.css" />
+    <link rel="stylesheet" href="/style/Steamster/main.css" />
+    <link rel="stylesheet" href="/style/GrainBrain/main.css" />
   </head>
   <body>
-    <div id="root">
-      <!--  loading...<br/><br/>
-      <form method="GET" action="/server/test">
-        <button>server test</button>
-      </form><br/>
-      <form method="GET" action="/">
-        <button>id test</button> 
-      </form> -->
-    </div>
+    <div id="root"></div>
     <script src="/bundle/bundle.js"></script>
   </body>
 </html>
