ui improve and mobile redirect

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="" type="image/png" />
     <link rel="stylesheet" href="/style/main.css" />
     <link rel="stylesheet" href="/style/Home/main.css" />
-    <link rel="stylesheet" href="/style/Home/notFound.css" />
+    <link rel="stylesheet" href="/style/Home/error.css" />
     <link rel="stylesheet" href="/style/NikkiKiwi/main.css" />
     <link rel="stylesheet" href="/style/NikkiKiwi/filter.css" />
     <link rel="stylesheet" href="/style/NikkiKiwi/data.css" />
